# llvmkit

./: .clangd  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INKWELL_MIGRATION.md  README.md  ROADMAP.md  UPSTREAM.md
crates/llvmkit-asmparser/: Cargo.toml  README.md
crates/llvmkit-asmparser/examples/: lex_file.rs  parse_file.rs  parser_demo.ll
crates/llvmkit-asmparser/src/: asm_parser_context.rs  file_loc.rs  lib.rs  ll_lexer.rs  ll_lexer_tests.rs  ll_parser.rs  ll_token.rs  module_summary.rs  numbered_values.rs  parse_error.rs  parser.rs  slot_mapping.rs
crates/llvmkit-asmparser/src/ll_lexer/: escape.rs  keywords.rs
crates/llvmkit-asmparser/tests/: lexer_integration.rs  parser_ap_literals.rs  parser_calls.rs  parser_constants.rs  parser_corpus.rs  parser_debug_metadata.rs  parser_eh_funclet.rs  parser_errors.rs  parser_facade.rs  parser_forward_refs.rs  parser_function_body.rs  parser_intrinsics.rs  parser_metadata.rs  parser_modifiers.rs  parser_module_headers.rs  parser_module_level.rs  parser_remaining_opcodes.rs  parser_summary.rs  parser_use_list.rs  parser_val_id.rs  parser_value_forms.rs  phi_real_incomings.rs  zero_incoming_phi_round_trip.rs
crates/llvmkit-asmparser/tests/fixtures/: corpus_dbg_declare_value.expected.ll  corpus_dbg_declare_value.ll  corpus_dbg_record_after_terminator_invalid.ll  corpus_flags_minimal.expected.ll  corpus_flags_minimal.ll  demo.ll  facade_minimal.ll  parser_corpus_manifest.txt  summary_minimal.ll
crates/llvmkit-asmparser/tests/fixtures/upstream/2010-02-05-FunctionLocalMetadataBecomesNull/: global_forward_gep.ll
crates/llvmkit-asmparser/tests/fixtures/upstream/ConstantExprFold/: constant_expr_binary_identity_folds_like_upstream.ll  constant_expr_fold_full_vector_gep_and_bitcast_fixture.ll
crates/llvmkit-asmparser/tests/fixtures/upstream/ConstantExprFoldCast/: constant_expr_fold_cast_fixture_matches_upstream.ll
crates/llvmkit-asmparser/tests/fixtures/upstream/ConstantExprFoldSelect/: constant_expr_fold_select_vector_fixture_matches_upstream.ll
crates/llvmkit-asmparser/tests/fixtures/upstream/ConstantExprNoFold/: constant_expr_casts_round_trip.ll
crates/llvmkit-ir/: Cargo.toml  README.md  build.rs
crates/llvmkit-ir/examples/: authored_pass.rs  build_add_function.rs  concurrent_counter.rs  cpu_state_add.rs  derived_struct_function.rs  factorial.rs  factorial_auto_ssa.rs  pass_manager_demo.rs  typed_vector_array.rs
crates/llvmkit-ir/src/: align.rs  analysis.rs  ap_float.rs  ap_int.rs  argument.rs  array_len.rs  asm_writer.rs  atomic_ordering.rs  atomicrmw_binop.rs  attribute_mask.rs  attributes.rs  basic_block.rs  block_params.rs  block_state.rs  calling_conv.rs  cfg.rs  cfg_update.rs  cmp_predicate.rs  comdat.rs  constant.rs  constant_fold.rs  constant_folding.rs  constant_range.rs  constants.rs  data_layout.rs  dce.rs  debug_loc.rs  demanded_bits.rs  denormal_mode.rs  derived_types.rs  dominator_tree.rs  element.rs  error.rs  float_kind.rs  fmf.rs  function.rs  function_signature.rs  gep_no_wrap_flags.rs  global_alias.rs  global_ifunc.rs  (+51 more)
crates/llvmkit-ir/src/ir_builder/: constant_folder.rs  folder.rs  no_folder.rs
crates/llvmkit-ir/src/phi_raw_tests/: analysis_switch.rs  constant_folding.rs  fmf.rs  medium.rs  typestate.rs  verifier_basic.rs  zero_incoming_phi.rs
crates/llvmkit-ir/tests/: analysis_basic.rs  analysis_preservation.rs  ap_float.rs  ap_int.rs  array_type_typed.rs  asm_writer_basic.rs  block_args.rs  block_call_typed.rs  block_params_typed.rs  builder_aggregate_vector.rs  builder_alloca.rs  builder_alloca_flags.rs  builder_array_typed_ops.rs  builder_atomic.rs  builder_atomic_load_store.rs  builder_call.rs  builder_cast_fp.rs  builder_cast_ptr_int.rs  builder_convenience.rs  builder_default_align.rs  builder_eh_calls.rs  builder_eh_data.rs  builder_fmf_and_phi.rs  builder_fp_arith.rs  builder_fp_cmp.rs  builder_funclet.rs  builder_gep.rs  builder_gep_addrspace.rs  builder_icmp_named.rs  builder_int_div_rem.rs  builder_int_logical.rs  builder_int_shifts.rs  builder_load_store.rs  builder_positioning_and_unary.rs  builder_select.rs  builder_typed_call.rs  builder_typed_memory.rs  builder_typestate_phi.rs  builder_typestate_seal.rs  builder_typestate_termination.rs  (+60 more)
crates/llvmkit-ir/tests/compile_fail/: add_function_removed.rs  add_function_removed.stderr  add_incoming_after_finish.rs  add_incoming_after_finish.stderr  array_insert_wrong_element.rs  array_insert_wrong_element.stderr  atomicrmw_set_value_requires_token.rs  atomicrmw_set_value_requires_token.stderr  binary_folder_rejects_non_binary_intrinsic.rs  binary_folder_rejects_non_binary_intrinsic.stderr  block_call_wrong_arg_type.rs  block_call_wrong_arg_type.stderr  block_call_wrong_arity.rs  block_call_wrong_arity.stderr  block_terminator_view_cannot_erase.rs  block_terminator_view_cannot_erase.stderr  call_void_no_return_accessor.rs  call_void_no_return_accessor.stderr  callbr_edit_has_no_remove.rs  callbr_edit_has_no_remove.stderr  claim_preserved_after_mutate.rs  claim_preserved_after_mutate.stderr  cond_br_edit_remove_consumes.rs  cond_br_edit_remove_consumes.stderr  cross_module_branch_target.rs  cross_module_branch_target.stderr  cross_module_global_initializer_brand.rs  cross_module_global_initializer_brand.stderr  cross_module_select_arm.rs  cross_module_select_arm.stderr  cross_module_value_brand.rs  cross_module_value_brand.stderr  custom_folder_wrong_brand.rs  custom_folder_wrong_brand.stderr  default_pipeline_o2_not_supported.rs  default_pipeline_o2_not_supported.stderr  extract_value_dyn_empty_slice_compiles.rs  extract_value_empty_indices.rs  extract_value_empty_indices.stderr  finished_landingpad_cannot_reopen_through_instruction_kind.rs  (+153 more)
crates/llvmkit-ir/tools/: gen_intrinsics.rs
crates/llvmkit-macros/: Cargo.toml
crates/llvmkit-macros/src/: function_pass.rs  ir_struct.rs  lib.rs  module_pass.rs  pass_macro_shared.rs
crates/llvmkit-support/: Cargo.toml  README.md
crates/llvmkit-support/src/: lib.rs  source_map.rs  span.rs
docs/: future-work.md  (+7 more)
llvmkit/: Cargo.toml  README.md
llvmkit/src/: lib.rs
(+107 files in other folders)
