[workspace]
resolver = "3"
members  = [
    "llvmkit",
    "crates/llvmkit-support",
    "crates/llvmkit-asmparser",
]
default-members = ["llvmkit"]

[workspace.package]
authors      = ["Aslan Gurtsiev", "The LLVM Project (original C++ implementation)"]
edition      = "2024"
version      = "0.0.1"
license      = "Apache-2.0 WITH LLVM-exception"
repository   = "https://github.com/r3bb1t/rllvm"
homepage     = "https://github.com/r3bb1t/rllvm"
rust-version = "1.85"
keywords     = ["llvm", "ir", "lexer", "parser", "compiler"]
categories   = ["compilers", "parser-implementations", "development-tools"]

[workspace.dependencies]
llvmkit-support   = { path = "crates/llvmkit-support" }
llvmkit-asmparser = { path = "crates/llvmkit-asmparser" }
thiserror         = "2"
