[workspace]
resolver = "3"
members  = [
    "llvmkit",
    "crates/llvmkit-support",
    "crates/llvmkit-asmparser",
    "crates/llvmkit-ir",
]
default-members = ["llvmkit"]

[workspace.package]
authors      = ["Aslan Gurtsiev", "The LLVM Project (original C++ implementation)"]
edition      = "2024"
version      = "0.0.2"
license      = "Apache-2.0 WITH LLVM-exception"
repository   = "https://github.com/r3bb1t/llvmkit"
homepage     = "https://github.com/r3bb1t/llvmkit"
rust-version = "1.96"
keywords     = ["llvm", "ir", "lexer", "parser", "compiler"]
categories   = ["compilers", "parser-implementations", "development-tools"]

[workspace.dependencies]
llvmkit-support   = { version = "0.0.2", path = "crates/llvmkit-support" }
llvmkit-asmparser = { version = "0.0.2", path = "crates/llvmkit-asmparser" }
llvmkit-ir        = { version = "0.0.2", path = "crates/llvmkit-ir" }
thiserror         = "2"
