[package]
name                   = "llvmkit"
description            = "Rust reimplementation of LLVM IR APIs."
authors.workspace      = true
edition.workspace      = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
llvmkit-support   = { workspace = true }
llvmkit-asmparser = { workspace = true }
