[package]
name                   = "llvmkit-ir"
description            = "LLVM IR data model in pure Rust: types, values, modules, instructions, builder."
authors.workspace      = true
edition.workspace      = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
bitflags  = "2"
boxcar    = "0.2"
thiserror = { workspace = true }

[dev-dependencies]
trybuild = "1"