[package]
name                   = "llvmkit-ir"
description            = "LLVM IR data model in pure Rust: types, values, modules, instructions, builder."
authors.workspace      = true
edition.workspace      = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true

[features]
default = ["macros"]
macros = ["dep:llvmkit-macros"]
gen-intrinsics = []

[dependencies]
bitflags  = "2"
boxcar    = "0.2"
llvmkit-macros = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
trybuild = "1"

[[bin]]
name = "gen_intrinsics"
path = "tools/gen_intrinsics.rs"
required-features = ["gen-intrinsics"]