[package]
name                   = "llvmkit-macros"
description            = "Procedural macros for llvmkit IR schema ergonomics."
authors.workspace      = true
edition.workspace      = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2      = "1"
quote            = "1"
syn              = { version = "2", features = ["derive", "parsing", "printing", "proc-macro"] }
