[package]
name                   = "llvmkit-support"
description            = "Shared support utilities for the llvmkit family (Span, Spanned, SourceMap)."
authors.workspace      = true
edition.workspace      = true
version.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
